Adicionei um paragráfo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, consectetur consequatur! Voluptatibus hic quos exercitationem officiis sunt consequuntur. Quos autem aspernatur laborum reiciendis eveniet ipsam dicta necessitatibus voluptatem doloribus sed.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium exercitationem perspiciatis aut fugit sequi perferendis. Beatae amet, explicabo autem quisquam in expedita odit quos accusamus, facilis, asperiores hic ducimus ipsum.</p>
 </body>
 </html>
